app/assets/stylesheets/master.scss
@import "bootstrap";

.clear {
  clear: both;
}

.circle {
  font-weight:bold;
  font-style: italic;
  position: relative;
  border-radius: 100%;
  background: #f84342;
  border: 1px solid #F7F7F7;
  width: 80px;
  height: 80px;
  margin: 10px 10px;
  text-align: center;
  color: #FFF;
  font-size: 10px;
  line-height: 16px;
  cursor: pointer;
  transform:rotate(11deg);
  -ms-transform:rotate(11deg); /* IE 9 */
  -webkit-transform:rotate(11deg); /* Opera, Chrome, and Safari */
}

.slogan {
  font-family: "Palatino Linotype", Palatino, Palladio, "URW Palladio L", "Book Antiqua", Baskerville, "Bookman Old Style", "Bitstream Charter", "Nimbus Roman No9 L", Garamond, "Apple Garamond", "ITC Garamond Narrow", "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;
  font-style: italic;
  padding-top: 26px;
}

.links {
  padding-top: 26px;
}

.links a {
  font-family: 'nobileregular', sans-serif;
  font-weight: bold;
  color: #333;
  font-size: 25px;
  border-bottom: 1px solid #ccc;
}

.links a:hover {
  text-decoration: none;
  color: red;
}

header {
  border-top: 9px solid #333;
}

hr {
  clear: both;
}

h1, {
  font-family: 'nobileregular', sans-serif;
  font-weight: bold;
  font-size: 48px;
  line-height: 1.3;
}

h2 {
  font-family: 'nobilemedium_italic', sans-serif;
}

h3 {
  font-family: 'nobileregular', sans-serif;
}
.next_quote {
  color: #f84342;
  font-family: 'nobilemedium_italic', sans-serif;
  font-size: 20px;
}

.footer_blurb {
  font-family: "Palatino Linotype", Palatino, Palladio, "URW Palladio L", "Book Antiqua", Baskerville, "Bookman Old Style", "Bitstream Charter", "Nimbus Roman No9 L", Garamond, "Apple Garamond", "ITC Garamond Narrow", "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;
  font-style: italic;
  font-size: 14px;
  text-align: right;
}

.logo:hover {
  text-decoration: none;
  }

.about {
  font-family: "Palatino Linotype", Palatino, Palladio, "URW Palladio L", "Book Antiqua", Baskerville, "Bookman Old Style", "Bitstream Charter", "Nimbus Roman No9 L", Garamond, "Apple Garamond", "ITC Garamond Narrow", "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;
}

.teachers {
  background-color: #f3f3f3;
}


@media (max-width: 750px) {
  .footer_blurb {
    text-align: left;
    padding-top: 10px;
  }
}
  
.modal {
  font-family: "Palatino Linotype", Palatino, Palladio, "URW Palladio L", "Book Antiqua", Baskerville, "Bookman Old Style", "Bitstream Charter", "Nimbus Roman No9 L", Garamond, "Apple Garamond", "ITC Garamond Narrow", "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;
}

h4 span {
  color: #ccc;
  font-family: 'nobileregular', sans-serif;
  font-weight: bold;

}

::selection {
  background-color: #f84342;
  color: #f3f3f3;
}

